--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@
         height: 200px;
       }
       .trusted-by-name {
+        text-align: center;
         font-size: 20px;
       }
       /*trusted by - section*/
@@ -199,6 +200,7 @@
       }
       .why-u-icon-ctr {
         background-color: red;
+        color: white;
         height: 50px;
         border-radius: 25px;
         width: 50px;
@@ -393,7 +395,21 @@
                   />
                 </div>
                 <div class="text p-0 p-2 trusted-by-name">
-                  Kigumba Trusted S.S
+                  Kigumba Intensive S.S
+                </div>
+              </div>
+              <div class="slide slide-main">
+                <div>
+                  <img
+                    src="/images/APAC-DLG.png"
+                    alt=""
+                    width="100px"
+                    height="100px"
+                    style="object-fit: contain"
+                  />
+                </div>
+                <div class="text p-0 p-2 trusted-by-name">
+                  Apac District Local Government
                 </div>
               </div>
               <div class="slide slide-main">
@@ -423,7 +439,7 @@
               <div class="slide slide-main">
                 <div>
                   <img
-                    src="./assets/Taacc-Copy.png"
+                    src="/images/taacc.jpg"
                     alt=""
                     width="100px"
                     height="100px"
@@ -431,6 +447,20 @@
                   />
                 </div>
                 <div class="text p-0 p-2 trusted-by-name">TAACC - Apac</div>
+              </div>
+              <div class="slide slide-main">
+                <div>
+                  <img
+                    src="/images/APAC-MUNICIPAL.jpg"
+                    alt=""
+                    width="100px"
+                    height="100px"
+                    style="object-fit: contain"
+                  />
+                </div>
+                <div class="text p-0 p-2 trusted-by-name">
+                  Apac Municipal Council
+                </div>
               </div>
               <div class="slide slide-main">
                 <div>
@@ -496,7 +526,7 @@
           class="mission mx-3 px-5 pt-5 d-flex align-items-start justify-content-start flex-column text-align-center"
         >
           <div class="mission-icon-ctr">
-            <i class="far fa-arrow-alt-circle-right"></i>
+            <i class="fas fa fa-lightbulb"></i>
           </div>
           <div class="mission-hdr py-2">Our Mission</div>
           <div class="mission-content">
@@ -510,7 +540,7 @@
           class="mission mx-3 px-5 pt-5 d-flex align-items-start justify-content-start flex-column text-align-center"
         >
           <div class="mission-icon-ctr">
-            <i class="fas fa-angle-right"></i>
+            <i class="fas fa fa-low-vision"></i>
           </div>
           <div class="mission-hdr py-2">Our Vision</div>
           <div class="mission-content">
@@ -523,7 +553,7 @@
           class="mission mx-3 px-5 pt-5 d-flex align-items-start justify-content-start flex-column text-align-center"
         >
           <div class="mission-icon-ctr">
-            <i class="fas fa-angle-right"></i>
+            <i class="fas fa fa-wine-glass"></i>
           </div>
           <div class="mission-hdr py-2">Core Values</div>
           <div class="mission-content">
@@ -601,8 +631,8 @@
             </div>
             <div class="why-u-hdr py-2">Committed Team</div>
             <div class="why-u-content">
-              With our committed team, we work together to offer great service
-              Delivery to our customers.
+              With our committed team, offer great service Delivery to our
+              customers.
             </div>
           </div>
           <div
@@ -612,13 +642,9 @@
             <div class="why-u-icon-ctr">
               <i class="fas fa-lock"></i>
             </div>
-            <div class="why-u-hdr py-2">
-              Quality &amp; Quick Service Delivery
-            </div>
+            <div class="why-u-hdr py-2">Affordable Service Delivery</div>
             <div class="why-u-content">
-              We strve to empower businesses and oranizationswith sustainableit
-              solutions that foster porductivity, maximize efficiency whle
-              reducing operating costs
+              Our Services are very Affordable and of quality
             </div>
           </div>
           <div
@@ -628,11 +654,10 @@
             <div class="why-u-icon-ctr">
               <i class="fas fa-lock"></i>
             </div>
-            <div class="why-u-hdr py-2">Our Mission</div>
+            <div class="why-u-hdr py-2">Availability</div>
             <div class="why-u-content">
-              We strve to empower businesses and oranizationswith sustainableit
-              solutions that foster porductivity, maximize efficiency whle
-              reducing operating costs
+              Our Team is Always available and ready to offer good service
+              delivery to you
             </div>
           </div>
         </div>
