--- a/portfolio.html
+++ b/portfolio.html
@@ -65,7 +65,9 @@
       }
       .main-staffinfo {
         width: 200px;
+        margin: 10px 0px;
         border-radius: 5px;
+        text-align: center;
       }
     </style>
   </head>
@@ -306,6 +308,48 @@
                             </div>
                           </div>
                         </div>
+                        <div class="col-sm-6 col-md-4 col-lg-2">
+                          <div
+                            class="main-staffinfo d-flex flex-column align-items-center justify-content-center"
+                          >
+                            <div class="staff-img p-0">
+                              <img
+                                src="/images/APAC-MUNICIPAL.jpg"
+                                class="p-0 p-2"
+                                style="height: 100%; width: 100%"
+                              />
+                            </div>
+                            <div class="staff-info">
+                              <div class="staff-name pt-2">
+                                <h4>Apac Municipal Council</h4>
+                              </div>
+                              <div class="staff-title">
+                                <p>Government Agency</p>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="col-sm-6 col-md-4 col-lg-2">
+                          <div
+                            class="main-staffinfo d-flex flex-column align-items-center justify-content-center"
+                          >
+                            <div class="staff-img p-0">
+                              <img
+                                src="/images/APAC-DLG.png"
+                                class="p-0 p-2"
+                                style="height: 100%; width: 100%"
+                              />
+                            </div>
+                            <div class="staff-info">
+                              <div class="staff-name pt-2">
+                                <h4>Apac District Local Government</h4>
+                              </div>
+                              <div class="staff-title">
+                                <p>Government Agency</p>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
                       </div>
                     </div>
                     <div class="col-md-1"></div>
@@ -338,6 +382,153 @@
                               </div>
                               <div class="staff-title">
                                 <p>Academic Institution</p>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="col-sm-6 col-md-4 col-lg-2">
+                          <div
+                            class="main-staffinfo d-flex flex-column align-items-center justify-content-center"
+                          >
+                            <div class="staff-img p-0">
+                              <img
+                                src="assets/macsoug.jpg"
+                                class="p-0 p-2"
+                                style="height: 100%; width: 100%"
+                              />
+                            </div>
+                            <div class="staff-info">
+                              <div class="staff-name pt-2">
+                                <h4>Macos Uganda</h4>
+                              </div>
+                              <div class="staff-title">
+                                <p>NGO</p>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="col-sm-6 col-md-4 col-lg-2">
+                          <div
+                            class="main-staffinfo d-flex flex-column align-items-center justify-content-center"
+                          >
+                            <div class="staff-img p-0">
+                              <img
+                                src="assets/Taacc-Copy.png"
+                                class="p-0 p-2"
+                                style="height: 100%; width: 100%"
+                              />
+                            </div>
+                            <div class="staff-info">
+                              <div class="staff-name pt-2">
+                                <h4>Taacc</h4>
+                              </div>
+                              <div class="staff-title">
+                                <p>NGO</p>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="col-sm-6 col-md-4 col-lg-2">
+                          <div
+                            class="main-staffinfo d-flex flex-column align-items-center justify-content-center"
+                          >
+                            <div class="staff-img p-0">
+                              <img
+                                src="assets/all-saints.png"
+                                class="p-0 p-2"
+                                style="height: 100%; width: 100%"
+                              />
+                            </div>
+                            <div class="staff-info">
+                              <div class="staff-name pt-2">
+                                <h4>All Saints University</h4>
+                              </div>
+                              <div class="staff-title">
+                                <p>Academic Institution</p>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="col-sm-6 col-md-4 col-lg-2">
+                          <div
+                            class="main-staffinfo d-flex flex-column align-items-center justify-content-center"
+                          >
+                            <div class="staff-img p-0">
+                              <img
+                                src="/assets/utc.jpg"
+                                class="p-0 p-2"
+                                style="height: 100%; width: 100%"
+                              />
+                            </div>
+                            <div class="staff-info">
+                              <div class="staff-name pt-2">
+                                <h4>UTC - Lira</h4>
+                              </div>
+                              <div class="staff-title">
+                                <p>Academic Institution</p>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="col-sm-6 col-md-4 col-lg-2">
+                          <div
+                            class="main-staffinfo d-flex flex-column align-items-center justify-content-center"
+                          >
+                            <div class="staff-img p-0">
+                              <img
+                                src="assets/download.png"
+                                class="p-0 p-2"
+                                style="height: 100%; width: 100%"
+                              />
+                            </div>
+                            <div class="staff-info">
+                              <div class="staff-name pt-2">
+                                <h4>Defend Defenders</h4>
+                              </div>
+                              <div class="staff-title">
+                                <p>NGO</p>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="col-sm-6 col-md-4 col-lg-2">
+                          <div
+                            class="main-staffinfo d-flex flex-column align-items-center justify-content-center"
+                          >
+                            <div class="staff-img p-0">
+                              <img
+                                src="/images/APAC-MUNICIPAL.jpg"
+                                class="p-0 p-2"
+                                style="height: 100%; width: 100%"
+                              />
+                            </div>
+                            <div class="staff-info">
+                              <div class="staff-name pt-2">
+                                <h4>Apac Municipal Council</h4>
+                              </div>
+                              <div class="staff-title">
+                                <p>Government Agency</p>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="col-sm-6 col-md-4 col-lg-2">
+                          <div
+                            class="main-staffinfo d-flex flex-column align-items-center justify-content-center"
+                          >
+                            <div class="staff-img p-0">
+                              <img
+                                src="/images/APAC-DLG.png"
+                                class="p-0 p-2"
+                                style="height: 100%; width: 100%"
+                              />
+                            </div>
+                            <div class="staff-info">
+                              <div class="staff-name pt-2">
+                                <h4>Apac District Local Government</h4>
+                              </div>
+                              <div class="staff-title">
+                                <p>Government Agency</p>
                               </div>
                             </div>
                           </div>
