--- a/services.html
+++ b/services.html
@@ -80,6 +80,7 @@
       .services-hdr-bold {
         font-size: 45px;
         margin: 10px 0px;
+        color: #2d378e;
       }
       .services-hdr-description {
         font-size: 24px;
@@ -90,7 +91,8 @@
         width: 240px;
         display: flex;
         justify-content: center;
-        color: white;
+
+        background-color: #fff;
         align-items: center;
       }
       .service-icon-ctr > img {
@@ -100,6 +102,8 @@
         font-size: 30px;
         font-weight: 500;
         margin: 15px 0px;
+        color: #2d378e;
+        font-family: poppins;
       }
       @media screen and (max-width: 768px) {
         .services-ctr {
@@ -184,7 +188,7 @@
               Proffessionl Team at affordable costs.
             </div>
             <div class="services-btn-more mt-4">
-              <button class="btn btn-outline-primary">Read More</button>
+              <button class="btn btn-outline-success">Read More</button>
             </div>
           </div>
           <div class="service" data-aos="fade-down">
@@ -203,7 +207,7 @@
               Designs, Structure and Efficiency of ICT Sytems.
             </div>
             <div class="services-btn-more mt-4">
-              <button class="btn btn-outline-primary">Read More</button>
+              <button class="btn btn-outline-success">Read More</button>
             </div>
           </div>
           <div class="service" data-aos="fade-left">
@@ -222,7 +226,7 @@
               Organisations.
             </div>
             <div class="services-btn-more mt-4">
-              <button class="btn btn-outline-primary">Read More</button>
+              <button class="btn btn-outline-success">Read More</button>
             </div>
           </div>
         </div>
@@ -243,7 +247,7 @@
               conclusions from.
             </div>
             <div class="services-btn-more mt-4">
-              <button class="btn btn-outline-primary">Read More</button>
+              <button class="btn btn-outline-success">Read More</button>
             </div>
           </div>
           <div class="service" data-aos="fade-up">
@@ -262,7 +266,7 @@
               IDs, Posters and other Graphics work
             </div>
             <div class="services-btn-more mt-4">
-              <button class="btn btn-outline-primary">Read More</button>
+              <button class="btn btn-outline-success">Read More</button>
             </div>
           </div>
           <div class="service" data-aos="fade-left">
@@ -281,7 +285,7 @@
               organisations' Challenges.
             </div>
             <div class="services-btn-more mt-4">
-              <button class="btn btn-outline-primary">Read More</button>
+              <button class="btn btn-outline-success">Read More</button>
             </div>
           </div>
         </div>
@@ -304,7 +308,7 @@
               related Hardware
             </div>
             <div class="services-btn-more mt-4">
-              <button class="btn btn-outline-primary">Read More</button>
+              <button class="btn btn-outline-success">Read More</button>
             </div>
           </div>
           <div class="service" data-aos="fade-down">
@@ -324,7 +328,7 @@
               academic Journey
             </div>
             <div class="services-btn-more mt-4">
-              <button class="btn btn-outline-primary">Read More</button>
+              <button class="btn btn-outline-success">Read More</button>
             </div>
           </div>
           <div class="service" data-aos="fade-left">
@@ -343,7 +347,7 @@
               Small scale, Internet Connections, LAN Connections and others
             </div>
             <div class="services-btn-more mt-4">
-              <button class="btn btn-outline-primary">Read More</button>
+              <button class="btn btn-outline-success">Read More</button>
             </div>
           </div>
         </div>
